--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
 import BaseLayout from '../../layouts/BaseLayout.astro';
+import { getBlogSlug } from '../../lib/blog';
 import { formatDate } from '../../lib/date';
 
 const allBlogs = (await getCollection('blog')).sort(
@@ -23,7 +24,7 @@ const allBlogs = (await getCollection('blog')).sort(
     </div>
     {
       allBlogs.map((post) => (
-        <a class="flex flex-col space-y-1 mb-4" href={`/blog/${post.slug}`}>
+        <a class="flex flex-col space-y-1 mb-4" href={`/blog/${getBlogSlug(post)}`}>
           <div class="w-full flex flex-col">
             <p class="text-neutral-900 font-semibold dark:text-neutral-100 tracking-tight">{post.data.title}</p>
             <p class="text-neutral-400 text-sm dark:text-neutral-400">
