--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,6 +45,9 @@ body {
 
 a {
   color: inherit;
+}
+
+.underline{
   text-decoration-line: underline;
   text-decoration-thickness: 0.08em;
   text-underline-offset: 0.14em;
