--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -39,7 +39,7 @@ const normalizedPath = pathname.includes('/blog/') ? '/blog' : pathname;
                 {name}
                 {isActive && (
                   <span
-                    class="absolute h-[1px] top-7 mx-2 inset-0 bg-neutral-200 dark:bg-neutral-800 z-[-1] dark:bg-gradient-to-r from-transparent to-neutral-900"
+                    class="absolute h-[1px] top-7 mx-2 inset-0 bg-neutral-200 dark:bg-neutral-700 z-[-1]"
                   />
                 )}
               </span>
