--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -15,7 +15,7 @@ const allBlogs = (await getCollection('blog')).sort(
   canonicalPath="/blog"
 >
   <section>
-    <h1 class="font-bold text-2xl mb-8 tracking-tighter">read my writings</h1>
+    <h1 class="font-bold text-2xl mb-8">read my writings</h1>
     <div class="prose prose-neutral mb-8 dark:prose-invert">
       <p>
         I've been writing online since 2020, mostly about web development and tech careers.<br />In
