--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -7,7 +7,7 @@ import ProjectList from '../components/ProjectList.astro';
 
 <BaseLayout title="my cv" description="My philosophical quotes and thoughts about life." canonicalPath="/cv">
   <section>
-    <h1 class="font-bold text-2xl mb-8 tracking-tighter">my cv</h1>
+    <h1 class="font-bold text-2xl mb-8">my cv</h1>
     <div class="prose prose-neutral mb-8 dark:prose-invert">
       <p>
         I am Filippo Benozzi, a professional with an academic and professional background that bridges
@@ -45,9 +45,9 @@ import ProjectList from '../components/ProjectList.astro';
         Each experience represents an opportunity for me to grow and make a meaningful contribution to
         building innovative and sustainable ventures.
       </p>
-      <h2 class="font-bold text-xl tracking-tighter">Work experience</h2>
+      <h2 class="font-bold text-xl">Work experience</h2>
       <h3 class="mb-0 mt-6">
-        <a class="font-bold text-base tracking-tighter m-0" target="_blank" rel="noopener noreferrer" href="https://nehos.it"
+        <a class="font-bold text-base m-0" target="_blank" rel="noopener noreferrer" href="https://nehos.it"
           >ErreBi Maglieria</a
         >
       </h3>
@@ -67,7 +67,7 @@ import ProjectList from '../components/ProjectList.astro';
         practices to the forefront of the business.
       </p>
       <h3 class="mb-0 mt-6">
-        <a class="font-bold text-base tracking-tighter m-0" target="_blank" rel="noopener noreferrer" href="https://nehos.it"
+        <a class="font-bold text-base m-0" target="_blank" rel="noopener noreferrer" href="https://nehos.it"
           >Dinamiza by Nehos</a
         >
       </h3>
@@ -80,10 +80,10 @@ import ProjectList from '../components/ProjectList.astro';
         innovative CSS and JavaScript frameworks like React, Tailwind, GatsbyJS, NextJS, and Symfony,
         continuously expanding my skill set and staying ahead in a rapidly evolving industry.
       </p>
-      <h2 class="font-bold text-xl tracking-tighter">Education</h2>
+      <h2 class="font-bold text-xl">Education</h2>
       <h3 class="mb-0 mt-6">
         <a
-          class="font-bold text-base tracking-tighter m-0"
+          class="font-bold text-base m-0"
           target="_blank"
           rel="noopener noreferrer"
           href="https://www.unive.it/web/it/2508">Post-Graduate Degree in Global Development and Entrepereneurship</a
@@ -92,7 +92,7 @@ import ProjectList from '../components/ProjectList.astro';
       <p class="text-neutral-400 text-sm dark:text-neutral-400">Ca' Foscari University, Venice // 2019 - present</p>
       <h3 class="mb-0 mt-6">
         <a
-          class="font-bold text-base tracking-tighter m-0"
+          class="font-bold text-base m-0"
           target="_blank"
           rel="noopener noreferrer"
           href="https://offertaformativa.unitn.it/en/lm/computer-science"
@@ -100,15 +100,15 @@ import ProjectList from '../components/ProjectList.astro';
         >
       </h3>
       <p class="text-neutral-400 text-sm dark:text-neutral-400">University of Trento // 2014 - 2018</p>
-      <h2 class="font-bold text-xl tracking-tighter">Volunteering</h2>
-      <h3 class="mb-0 mt-6 font-bold text-base tracking-tighter">ProLoco di Zero Branco</h3>
+      <h2 class="font-bold text-xl">Volunteering</h2>
+      <h3 class="mb-0 mt-6 font-bold text-base">ProLoco di Zero Branco</h3>
       <p class="text-neutral-400 text-sm dark:text-neutral-400">2010 - 2018</p>
       <p class="mt-0">
         I worked with a local volunteer association dedicated to promoting the region, contributing to
         the organization of events, managing advertising campaigns, designing signage, and developing
         computerized order management systems.
       </p>
-      <h3 class="mb-0 mt-6 font-bold text-base tracking-tighter">Elderly club of Zero Branco</h3>
+      <h3 class="mb-0 mt-6 font-bold text-base">Elderly club of Zero Branco</h3>
       <p class="text-neutral-400 text-sm dark:text-neutral-400">2013 - 2016</p>
       <p class="mt-0">
         For three years, I designed and conducted computer and smartphone usage courses for the senior
@@ -117,7 +117,7 @@ import ProjectList from '../components/ProjectList.astro';
         experience allowed me to develop strong communication and teaching skills, as well as a deep
         understanding of how to adapt technical concepts to different audiences.
       </p>
-      <h2 class="font-bold text-xl tracking-tighter">Projects & Works</h2>
+      <h2 class="font-bold text-xl">Projects & Works</h2>
     </div>
     <div>
       <ProjectLink
@@ -142,7 +142,7 @@ import ProjectList from '../components/ProjectList.astro';
         name="Edventurous Leadership"
         desc="LMS that challenges different types of leaders to think more broadly about leadership."
       />
-      <h3 class="font-bold text-base mt-4 tracking-tighter">other projects</h3>
+      <h3 class="font-bold text-base mt-4">other projects</h3>
       <div class="flex flex-wrap w-full project-list text-sm">
         <ProjectList name="Oikos" link="https://oikos.it/" />
         <ProjectList name="Atlantis Caps" link="https://atlantisheadwear.com/" />
