--- a/src/pages/entrepreneurial-journey.astro
+++ b/src/pages/entrepreneurial-journey.astro
@@ -30,7 +30,7 @@ const content = md.render(gistContent);
   canonicalPath="/entrepreneurial-journey"
 >
   <section>
-    <h1 class="font-bold text-2xl mb-8 tracking-tighter">my entrepreneurial journey</h1>
+    <h1 class="font-bold text-2xl mb-8">my entrepreneurial journey</h1>
     <div class="prose prose-neutral mb-8 dark:prose-invert"></div>
     <div class="prose log prose-neutral mb-8 dark:prose-invert">
       {gistContent ? <div set:html={content} /> : <p>Content not available right now.</p>}
