--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -56,7 +56,7 @@ const structuredData = {
 >
   <script slot="head" type="application/ld+json" set:html={JSON.stringify(structuredData)}></script>
   <section>
-    <h1 class="font-bold text-2xl tracking-tighter max-w-[650px]">{post.data.title}</h1>
+    <h1 class="font-bold text-2xl max-w-[650px]">{post.data.title}</h1>
     <div class="flex justify-between items-center mt-2 mb-8 text-sm max-w-[650px]">
       <p class="text-sm text-neutral-400 dark:text-neutral-400">
         {formatDate(post.data.publishedAt, true)}
