--- a/src/pages/log.astro
+++ b/src/pages/log.astro
@@ -13,7 +13,7 @@ const content = md.render(logContentRaw);
   canonicalPath="/log"
 >
   <section>
-    <h1 class="font-bold text-2xl mb-8 tracking-tighter">my log</h1>
+    <h1 class="font-bold text-2xl mb-8">my log</h1>
     <div class="prose prose-neutral mb-8 dark:prose-invert">
       <p>
         This is my personal log useful also for me, synced with Obsidian, where I share all the
